@@ -3,14 +3,12 @@
 
 import os
 import time
-import unittest
 from test.fork_wait import ForkWait
-from test.support import run_unittest, reap_children
+from test.support import run_unittest, reap_children, get_attribute
 
-try:
-    os.fork
-except AttributeError:
-    raise unittest.SkipTest("os.fork not defined -- skipping test_fork1")
+# Skip test if fork does not exist.
+get_attribute(os, 'fork')
+
 
 class ForkTest(ForkWait):
     def wait_impl(self, cpid):
