@@ -3,6 +3,11 @@ from tkinter.test import runtktests
 from test import support
 import unittest
 
+# Skip test if _tkinter wasn't built.
+support.import_module('_tkinter')
+
+import tkinter
+
 try:
     tkinter.Button()
 except tkinter.TclError as msg:
